--- a/flor/index.html
+++ b/flor/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>flor</title>
+	    <meta charset="utf-8">
+    <title>GRUPO ALFAS INS</title><br>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css\estilo.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
+<header>
+    <h1>¡BIENVENIDOS A NUESTRO PRIMER SITIO WEB!</h1>
+
+<button><a href="">Compañeros</a></button>
+
+</header>
 <body>
 <ul><li><img src="img\foto.jpg"></li></ul>
 </body>
