--- a/flor/index.html
+++ b/flor/index.html
@@ -10,7 +10,7 @@
 <header>
     <h1>¡BIENVENIDOS A NUESTRO PRIMER SITIO WEB!</h1>
 
-<button><a href="">Compañeros</a></button>
+<button><a href="">Compañero</a></button>
 
 </header>
 <body>
