--- a/flor/index.html
+++ b/flor/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="fonts.css">
 </head>
 <header>
-    <h1>¡BIENVENIDOS A NUESTRO PRIMER SITIO WEB!</h1>
+    <h1>¡BIENVENIDOS</h1>
 
 <button><a href="">Compañero</a></button>
 
